--- a/media-sound/odr-audioenc/files/odr-audioenc@.service
+++ b/media-sound/odr-audioenc/files/odr-audioenc@.service
@@ -34,12 +34,13 @@ Environment="AUDIOENC_MISC_OPTS="
 
 Type=simple
 ExecStart=/usr/bin/odr-audioenc \
-              ${AUDIOENC_INPUT_OPTS} \
+              $AUDIOENC_INPUT_OPTS \
               --bitrate=${AUDIOENC_ENCODER_BITRATE} \
               --channels=${AUDIOENC_ENCODER_CHANNELS} \
               --rate=${AUDIOENC_ENCODER_SAMPLERATE} \
-              ${AUDIOENC_OUTPUT_OPTS} \
-              ${AUDIOENC_MISC_OPTS}
+              $AUDIOENC_OUTPUT_OPTS \
+              $AUDIOENC_MISC_OPTS
+
 User=odr-audioenc
 Group=odr
 
