media-sound/odr-padenc: Fixing systemd env variable expansion
Make sure that the options and arguments will be expanded to standalone
argv values rather than treated as one argument. For example "--one",
"--two" vs. "--one --two".

See also the second part about environment variable expansion on
https://stackoverflow.com/a/37865527

--- a/media-sound/odr-padenc/files/odr-padenc@.service
+++ b/media-sound/odr-padenc/files/odr-padenc@.service
@@ -28,7 +28,7 @@ ExecStart=/usr/bin/odr-padenc \
               --pad=${PADENC_PAD_LENGTH} \
               --charset=${PADENC_CHARSET} \
               --remove-dls \
-              ${PADENC_MISC_OPTS}
+              $PADENC_MISC_OPTS
 
 User=odr-padenc
 Group=odr
